@@ -52,6 +52,7 @@ extern s32 SEQ_RECORD_Init(u32 mode);
 extern s32 SEQ_RECORD_Reset(u8 track);
 extern s32 SEQ_RECORD_ResetAllTracks(void);
 extern s32 SEQ_RECORD_AllNotesOff(void);
+extern s32 SEQ_RECORD_DebugActiveNotes(void);
 extern s32 SEQ_RECORD_Enable(u8 enable, u8 reset_timestamps);
 
 extern s32 SEQ_RECORD_PrintEditScreen(void);
